# OpenCodeAiWIthPython

./: .gitignore  README.md  pyproject.toml
src/opencode_ai_with_python/: main.py
tests/: test_main.py
